Added Image link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			    </div>
 			    
 			  <div class="col-lg-3 col-sm-3" id="img">
-				<img src="Amiya_image.jpg" class="img-thumbnail">
+				<img src="https://github.com/amiyatripathi/amiyatripathi.github.io/blob/master/Amiya_image.jpg" class="img-thumbnail">
 			  </div>
 			</div>
 		</div>
