--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
         <li ><a href="#education">Education </a></li>
         <li><a href="#hobby">Hobbies</a></li>
         <li><a href="#contact">Contact</a></li>
-
-
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li ><a href="https://github.com/amiyatripathi" target="_blank">Github </a></li>
+        <li><a href="https://www.linkedin.com/in/amiya-tripathi-2830b843/" target="_blank">Linkedin</a></li>
+        <li><a href="https://github.com/amiyatripathi/amiyatripathi.github.io/blob/master/resume.pdf" target="_blank">Resume</a></li>
+      </ul>
     </div><!-- /.navbar-collapse -->
-
   </div><!-- /.container-fluid -->
-  
+
 </nav>
 	<div class="container" >
 		<div class="row">
