--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li ><a href="https://github.com/amiyatripathi" target="_blank">Github </a></li>
         <li><a href="https://www.linkedin.com/in/amiya-tripathi-2830b843/" target="_blank">Linkedin</a></li>
-        <li><a href="https://github.com/amiyatripathi/amiyatripathi.github.io/blob/master/resume.pdf" target="_blank">Resume</a></li>
+        <!-- <li><a href="https://github.com/amiyatripathi/amiyatripathi.github.io/blob/master/resume.pdf" target="_blank">Resume</a></li> -->
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
