--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li ><a href="https://github.com/amiyatripathi" target="_blank">Github </a></li>
         <li><a href="https://www.linkedin.com/in/amiya-tripathi-2830b843/" target="_blank">Linkedin</a></li>
-        <!-- <li><a href="https://github.com/amiyatripathi/amiyatripathi.github.io/blob/master/resume.pdf" target="_blank">Resume</a></li> -->
+        <li><a href="https://github.com/amiyatripathi/amiyatripathi.github.io/resume.pdf" target="_blank">Resume</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -54,7 +54,7 @@
 			    </div>
 			    
 			  <div class="col-lg-3 col-sm-3" id="img">
-				<img src="https://github.com/amiyatripathi/amiyatripathi.github.io/blob/master/Amiya_image.jpg" class="img-thumbnail">
+				<img src="https://github.com/amiyatripathi/amiyatripathi.github.io/Amiya_image.jpg" class="img-thumbnail">
 			  </div>
 			</div>
 		</div>
