--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			    </div>
 			    
 			  <div class="col-lg-3 col-sm-3" id="img">
-				<img src="https://github.com/amiyatripathi/amiyatripathi.github.io/image.jpg" class="img-thumbnail">
+				<img src="https://github.com/amiyatripathi/amiyatripathi.github.io/blob/master/image.jpg" class="img-thumbnail">
 			  </div>
 			</div>
 		</div>
