--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 	</script>
 </head>
 <body>
+
+
+
+
+
+
+
+
+
 	<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -93,6 +102,18 @@
 				</div>
 			</div>
 		</div>
+		<div class="row" id="projects">
+			<div class="container">
+				<h2>My Projects</h2>
+				<div class="jumbotron">
+					<ul>
+						<li><p>Watching Movies.</p></li>
+						<br>
+						<li><p>Playing Cricket.</p></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 		<div class="row" id="hobby">
 			<div class="container">
 				<h2>Hobbies</h2>
@@ -117,6 +138,11 @@
 			</div>
 		</div>
 	</div>
+	<footer class="text-muted">
+  		<div class="container text-center">
+   			<p class="card-text">&COPY; Amiya Tripathi 2020</p>
+  		</div>
+	</footer>
 	<script
 			  src="http://code.jquery.com/jquery-3.4.1.js"
 			  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
