--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
 			  </div>
 			</div>
 		</div>
+		<div class="row" id="projects">
+			<div class="container">
+				<h2>Research Interest</h2>
+				<div class="jumbotron">
+					<ul>
+						<li><p>Formal Verification.</p></li>
+						<br>
+						<li><p>System Security.</p></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 		<div class="row" id="education">
 			<div class="container" >
 				<h2>Education</h2>
@@ -99,18 +111,6 @@
 						</tbody>
   
                     </table>
-				</div>
-			</div>
-		</div>
-		<div class="row" id="projects">
-			<div class="container">
-				<h2>My Projects</h2>
-				<div class="jumbotron">
-					<ul>
-						<li><p>Watching Movies.</p></li>
-						<br>
-						<li><p>Playing Cricket.</p></li>
-					</ul>
 				</div>
 			</div>
 		</div>
