--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li ><a href="#education">Education </a></li>
+        <li ><a href="#research">Research Interest</a></li>
         <li><a href="#hobby">Hobbies</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -67,7 +68,7 @@
 			  </div>
 			</div>
 		</div>
-		<div class="row" id="projects">
+		<div class="row" id="research">
 			<div class="container">
 				<h2>Research Interest</h2>
 				<div class="jumbotron">
